--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -35,5 +35,7 @@ included: # paths to include during linting. `--path` is ignored if present.
 
 excluded: # paths to ignore during linting. Takes precedence over `included`.
 - NearbyWiki/Application/Resources
+- NearbyWiki/Application/Vendor
 - Pods
+
 
