--- a/NearbyWiki/Configuration/Development.xcconfig
+++ b/NearbyWiki/Configuration/Development.xcconfig
@@ -9,4 +9,4 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-API_URL = https://en.wikipedia.org/w/api.php
+API_URL = https:/$()/$()en.wikipedia.org/w/api.php
