T6: Completed detail screen.

--- a/NearbyWiki/Configuration/Development.xcconfig
+++ b/NearbyWiki/Configuration/Development.xcconfig
@@ -9,6 +9,7 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-WIKI_API_URL = https:/$()/$()en.wikipedia.org/w/api.php
+WIKIMEDIA_API_URL = https:/$()/$()commons.wikimedia.org/w/thumb.php
+WIKIPEDIA_API_URL = https:/$()/$()en.wikipedia.org/w/api.php
 GOOGLE_API_URL = https:/$()/$()maps.googleapis.com/maps/api
 GOOGLE_API_KEY = AIzaSyDRrVSN3yMuSrgr_mXun0bty9dVXUBHXio
